k8s/mlservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ml-service
  template:
    metadata:
      labels:
        app: ml-service
    spec:
      volumes:
        - name: shared-model
          hostPath:
            path: /tmp/shared-model
            type: DirectoryOrCreate
      containers:
        - name: ml-service
          image: finalproject-ml-service
          imagePullPolicy: Never
          ports:
            - containerPort: 6000
          volumeMounts:
            - name: shared-model
              mountPath: /shared-model
---
apiVersion: v1
kind: Service
metadata:
  name: ml-service
spec:
  selector:
    app: ml-service
  ports:
    - protocol: TCP
      port: 6000
      targetPort: 6000
  type: ClusterIP
